# nlp-engineering

./: CLAUDE.md  model.joblib  pr6.py  pyproject.toml
.claude/: settings.local.json
data/: ai_ml_course_reviews.csv  amazon_reviews_raw_120.csv
labs/: M1_L1_lecture_nb_01_preprocessing.ipynb  M1_L1_lecture_nb_02_word frequencies.ipynb  lab3.ipynb
notebook/: notebook-1.ipynb  notebook-2.ipynb  notebook-3.ipynb  test copy.ipynb  testt.ipynb  v1_sentiment_scope.ipynb
